# protocol

./: .clang-format  CMakeLists.txt  FAQ.md  GUIDELINES.md  README.md  buf.work.yaml  buf.yaml  meson.build  shell.nix
.github/workflows/: buf.yml
auth/v1/: auth.proto
batch/v1/: batch.proto
chat/v1/: Formatting.md  IDS.md  Permissions.md  channels.proto  chat.proto  emotes.proto  guilds.proto  messages.proto  moderation.proto  permissions.proto  postbox.proto  profile.proto  stream.proto  streaming.proto
core/v1/: core.proto
emote/v1/: emote.proto  stream.proto  types.proto
foundation/v1/: foundation.proto
harmonytypes/v1/: types.proto
mediaproxy/v1/: mediaproxy.proto
name-resolution/: name-resolution.md
name-resolution/example/: main.go
profile/v1/: profile.proto  stream.proto  types.proto
rest/: rest.md
secret/v1/: encrypted.proto  keys.proto  messages.proto  overview.md  secret.proto  state-events.md  state.proto
stable/: CMakeLists.txt  Ids.md  buf.yaml
stable/auth/v1/: auth.proto
stable/batch/v1/: batch.proto
stable/channels/v1/: channels.proto  messages.proto  send_messages.proto  streams.proto
stable/chat/v1/: Permissions.md  channels.proto  chat.proto  guilds.proto  messages.proto  permissions.proto  private_channel.proto  stream.proto
stable/emote/v1/: emote.proto  types.proto
stable/guilds/v1/: channels.proto  guilds.proto  (+9 more)
stable/name-resolution/: name-resolution.md
stable/rest/: rest.md
staging/: CMakeLists.txt
stream/v1/: stream.proto
sync/v1/: sync.proto
token/v1/: token.proto
voice/v1/: voice.proto
(+16 files in other folders)
