project('harmony-protocol')

declare_dependency(
    'protocols',
    sources : [
        'auth/v1/auth.proto',
        'harmonytypes/v1/types.proto',
        'chat/v1/messages.proto',
        'chat/v1/channels.proto',
        'chat/v1/emotes.proto',
        'chat/v1/guilds.proto',
        'chat/v1/permissions.proto',
        'chat/v1/profile.proto',
        'chat/v1/streaming.proto',
        'chat/v1/chat.proto',
    ]
)
